fix: negative margin spacing

--- a/openmetadata-ui/src/main/resources/ui/src/components/common/rich-text-editor/RichTextEditorPreviewer.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/common/rich-text-editor/RichTextEditorPreviewer.less
@@ -60,7 +60,6 @@
       border-left: 3px solid @primary-color;
       padding-bottom: 12px !important;
       margin-top: 12px;
-      margin-bottom: -12px;
 
       h1,
       h2,
